Bedre PC UI + dawa integation

--- a/FoodWasteSalling/Client/wwwroot/index.html
+++ b/FoodWasteSalling/Client/wwwroot/index.html
@@ -31,6 +31,25 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="js/site.js"></script>
+
+    <!--<script src="_framework/blazor.webview.js" autostart="false"></script>
+    <script src="https://unpkg.com/@panzoom/panzoom/dist/panzoom.min.js"></script>
+    <script>
+        window.enableZoom = function (elementId) {
+            const elem = document.getElementById(elementId);
+            if (elem) {
+                Panzoom(elem, {
+                    maxScale: 4,
+                    contain: 'outside',
+                });
+            }
+        }
+    </script>-->
+    <!-- Leaflet CSS -->
+    <!--<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />-->
+    <!-- Leaflet JS -->
+    <!--<script type="module" src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>-->
 </body>
 
 </html>
